--- a/backEnd/eureka/src/main/resources/application.properties
+++ b/backEnd/eureka/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=eureka
+# application.properties for Eureka Server
+server.port=8761
+
+# Eureka server configuration
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
