--- a/backEnd/microservice2/src/main/resources/application.properties
+++ b/backEnd/microservice2/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=microservice2
 spring.datasource.url=jdbc:mysql://localhost:3306/nom_de_ta_base
 spring.datasource.username=root
-spring.datasource.password=ton_mot_de_passe
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 server.port=8082
